# TravisCI_CTests

./: .travis.yml  CMakeLists.txt  README.md  sqrt.cpp  sqrt_test.cpp  squareRoot.h
src/: dailycodingproblem1.cpp  dailycodingproblem1.h  squareRoot.cpp
test/: dailycodingproblem1_test.cpp
